CLC-3263 CFV Print view: labels and values are now correctly aligned vertically

--- a/app/assets/stylesheets/_print.scss
+++ b/app/assets/stylesheets/_print.scss
@@ -73,4 +73,7 @@
   .cc-print-show {
     display: block !important;
   }
+  .cc-print-width-auto {
+    width: auto !important;
+  }
 }
